--- a/css/responsive.css
+++ b/css/responsive.css
@@ -159,7 +159,8 @@
   justify-content: center; 
 }
 
-.bg-header .hero-wrapper { width: 400px; }
+.container { padding-right: 5px; padding-left: 5px;}
+.bg-header .hero-wrapper { width: 430px; }
 .bg-header .hOne{ font-size: 55px; }
 .bg-header .hero-wrapper h1 { font-size: 35px; }
 #message { margin: 20px 0 0 0; }
