--- a/css/responsive.css
+++ b/css/responsive.css
@@ -159,8 +159,10 @@
   justify-content: center; 
 }
 
+#navbar-brand a img { width: 250px;}
 .container { padding-right: 1px; padding-left: 1px;}
-.bg-header .hero-wrapper { width: 440px; }
+.bg-header .hero-wrapper { width: 450px; }
+.bg-header .container img { width: 380px; }
 .bg-header .hOne{ font-size: 55px; }
 .bg-header .hero-wrapper h1 { font-size: 35px; }
 #message { margin: 20px 0 0 0; }
