--- a/css/responsive.css
+++ b/css/responsive.css
@@ -142,7 +142,7 @@
   footer  .logoSocials { order: 2; }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 440px) {
     
   [aria-expanded="true"] ~ ul {
   padding: 40px 0 120px 0;
@@ -161,10 +161,15 @@
 
 #navbar-brand a img { width: 250px;}
 .container { padding-right: 1px; padding-left: 1px;}
-.bg-header .hero-wrapper { width: 450px; }
+
+.bg-header .hero-wrapper {
+   width: 450px; 
+   margin: 0 0 0 0;
+  }
+
 .bg-header .container img { width: 380px; }
 .bg-header .hOne{ font-size: 55px; }
-.bg-header .hero-wrapper h1 { font-size: 35px; }
+.bg-header .hero-wrapper h1 {  }
 #message { margin: 20px 0 0 0; }
 
 .bg-header .container img { 
